youtube 리드미에 봐야할 내용 추가 + 7(완료) + 9(작성중)
- oop 관련 내용 공부 (새벽)

--- a/etc/note/1.md
+++ b/etc/note/1.md
@@ -115,7 +115,7 @@
     - 나쁜 소식
         - Push, Contacts API 같은 것들은 수많은 브라우저에서 지원을 하고 있는 경우인데, 애플 사파리에선 실행되지 않을 가능성이 높음
         - 이유 : 고의적으로 실행시키지 않음. (앱 스토어의 경쟁력을 지켜주기 위해)
-            - 애플은 브라우저가 강력해지기를 원하지 않음…
-        - 이 정책은 iOS 유저에게도 영향이 가는데, iOS 전용 크롬을 실행하더라도 결국엔, 웹 페이지를 렌더링하는 것은 Safari이기 때문
+            - 애플은 브라우저가 강력해지기를 원하지 않음… (앱스토어 판매량 감소 때문에)
+        - 이 정책은 iOS 유저에게도 영향이 가는데, iOS 전용 크롬을 실행하더라도 결국엔, 웹 페이지를 렌더링하는 것은 Safari이기 때문 <p>
 
 - 멋진 툴을 사용하기 위해 필요한건 JS만 알면 된다는 것! amazing!!
